# sddm-theme

./: CMakeLists.txt  LongUIMenu.qml  LongUIMenuItem.qml  Main.qml  README.md  SessionMenu.qml  UserView.qml  sddm.conf
debian/: changelog  control  copyright
